# box

./: .gitignore  Pipfile  README.md  backup.py  backup_manager.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  storage.py
.github/workflows/: pypi-test.yml
box_cmd/: cli.py  cmd_handler.py  preset.py
box_cmd/exceptions/: exceptions.py
controller/: __init__.py  backup.py  cmd_handler.py  destination.py  preset.py
docs/: presets_schema.json  requirements.md  yabu_cmd.vpp
exceptions/: exceptions.py
model/: backup_manager.py  destination_manager.py  preset_manager.py
tests/: conftest.py  test_backup.py  test_backup_manager.py  test_cli.py  test_destination.py  test_preset.py  test_preset_manager.py
view/: __init__.py  yabu_cmd.py
yabu_cmd/: __init__.py  backup.py  cli.py  cmd_handler.py  preset.py
yabu_cmd/controller/: __init__.py  backup.py  cmd_handler.py  destination.py  preset.py  progress_info.py
yabu_cmd/exceptions/: exceptions.py
yabu_cmd/model/: __init__.py  backup_manager.py  destination_manager.py  preset_manager.py
yabu_cmd/tests/: test_backup_manager.py
