[project]
name = "yabu"
version = "2.0.0"
authors = [
  { name="Riley Housden", email="riley.t.housden@gmail.com" },
]
description = "A command-line tool to easily create backups of selected folders or files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/InValidFire/yabu"
"Bug Tracker" = "https://github.com/InValidFire/yabu/issues"

[options]
packages = find:
install_requires = 
    jsonschema
    click
    tqdm

[options.entry_points]
console_scripts = 
    yabu = yabu_cmd.cli:cli

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501, W503